--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,8 +7,9 @@
 
 @import 'layout/header';
 @import 'layout/footer';
-@import 'layout/forms';
 
 @import 'components/buttons';
 
 @import 'pages/home';
+@import 'pages/menu';
+
