--- a/css/main.css
+++ b/css/main.css
@@ -76,4 +76,90 @@ th {
   padding: 0;
 }
 
+body {
+  font-size: 16px;
+}
+
+h1,
+h2,
+h3,
+p {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+}
+
+h1,
+h2,
+h3 {
+  font-weight: 700;
+}
+
+p {
+  font-weight: 400;
+}
+
+h1, h2 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header-logo {
+  width: 220px;
+  padding: 20px;
+}
+
+.search-box {
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 0 7px 9px -7px #9a9a9a;
+  background-color: #e6e6e6;
+  color: #4d4d4d;
+}
+.search-box__icon {
+  padding: 10px;
+  color: #4d4d4d;
+}
+.search-box__input {
+  font-weight: 500;
+}
+
+.top-banner {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: #f3f3f3;
+  color: #000;
+  text-align: center;
+}
+.top-banner__title {
+  width: 250px;
+}
+.top-banner__descr {
+  color: #4d4d4d;
+  text-align: center;
+}
+.top-banner__button {
+  margin: 30px 0;
+  padding: 1em 2em;
+  border: none;
+  border-radius: 2em;
+  box-shadow: 3px 3px 6px #9a9a9a;
+  background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  color: #fff;
+  font-weight: 500;
+}
+
 /*# sourceMappingURL=main.css.map */
