--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -1,3 +1,8 @@
 $primary : #9356DC;
 $secondary: #FF79DA;
 $accent: #99E2D0;
+
+$primary-bg: rgb(243, 243, 243);
+$secondary-bg: darken($primary-bg, 5%);
+
+$dark-gray: darken($primary-bg, 65%);
