--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ th {
 }
 
 body {
-  font-size: 16px;
+  font-size: 17px;
 }
 
 h1,
@@ -156,13 +156,15 @@ h1, h2 {
   padding: 1em 2em;
   border: none;
   border-radius: 2em;
-  box-shadow: 3px 3px 6px #9a9a9a;
+  box-shadow: 2px 2px 8px #b3b3b3;
   background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
   color: #fff;
-  font-weight: 500;
+  font-weight: 700;
+  cursor: pointer;
 }
 .top-banner__button:hover {
-  background-image: linear-gradient(to top right, #FF79DA, #9356DC);
+  box-shadow: 2px 2px 8px #676767;
+  background-image: linear-gradient(to bottom right, #ff93e1, #a16be0);
 }
 
 /*# sourceMappingURL=main.css.map */
