--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -36,7 +36,7 @@
        @include button;
 
        &:hover {
-        background-image: linear-gradient(to top right, $secondary, $primary);
-       }
+            @include hover    
+        }
     }
 }
