--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -29,3 +29,11 @@ h1, h2 {
     font-size: 1.5rem;
     margin-bottom: 1rem;
 }
+
+.section-title{
+    margin-top: 30px;
+}
+
+.menu-catagory__title {
+    font-family: 'Shrikhand', cursive;
+}
