--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,14 @@ h1, h2 {
   margin-bottom: 1rem;
 }
 
+.section-title {
+  margin-top: 30px;
+}
+
+.menu-catagory__title {
+  font-family: "Shrikhand", cursive;
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -121,13 +129,13 @@ h1, h2 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  box-shadow: inset 0 7px 9px -7px #9a9a9a;
-  background-color: #e6e6e6;
-  color: #4d4d4d;
+  box-shadow: 0 5px 8px #7a7a7a;
+  background-color: #e0e0e0;
+  color: #474747;
 }
 .search-box__icon {
   padding: 10px;
-  color: #4d4d4d;
+  color: #474747;
 }
 .search-box__input {
   font-weight: 500;
@@ -140,7 +148,7 @@ h1, h2 {
   justify-content: center;
   align-items: center;
   padding: 20px;
-  background-color: #f3f3f3;
+  background-color: #f4f4f4;
   color: #000;
   text-align: center;
 }
@@ -148,7 +156,7 @@ h1, h2 {
   width: 250px;
 }
 .top-banner__descr {
-  color: #4d4d4d;
+  color: #474747;
   text-align: center;
 }
 .top-banner__button {
@@ -156,15 +164,47 @@ h1, h2 {
   padding: 1.3em 2em;
   border: none;
   border-radius: 2em;
-  box-shadow: 1px 3px 8px #b3b3b3;
+  box-shadow: 0 5px 8px #7a7a7a;
   background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
   color: #fff;
   font-weight: 700;
   cursor: pointer;
 }
 .top-banner__button:hover {
-  box-shadow: 1px 3px 8px #676767;
+  box-shadow: 0px 5px 8px #616161;
   background-image: linear-gradient(to bottom right, #ff93e1, #a16be0);
+}
+
+.steps,
+.restaurants {
+  padding: 20px;
+}
+
+.step {
+  display: flex;
+  flex-direction: row;
+  justify-content: justify;
+  align-items: center;
+  margin: 20px 0 20px 10px;
+  padding: 1.5em 0;
+  border-radius: 1.5em;
+  box-shadow: 0 5px 8px #e0e0e0;
+  background-color: #f4f4f4;
+}
+.step__num {
+  position: relative;
+  right: 10px;
+  padding: 2px 6px;
+  border-radius: 50%;
+  background-color: #9356DC;
+  color: #fff;
+}
+.step__icon {
+  margin: 0 20px;
+  color: #7a7a7a;
+}
+.step__descr {
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=main.css.map */
