--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -9,3 +9,13 @@
     justify-content: $justify;
     align-items: $align;
 }
+
+@mixin box-shadow ($button: false, $inset: false) {
+    @if $inset {
+        box-shadow: inset 0 7px 9px -7px $mid-gray;
+    } @else if $button {
+        box-shadow: 0 5px 8px $mid-gray;
+    } @else {
+        box-shadow: 0 5px 8px $gray;
+    }
+}
