--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ h1, h2 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 5px 8px #7a7a7a;
+  box-shadow: inset 0 7px 9px -7px #7a7a7a;
   background-color: #e0e0e0;
   color: #474747;
 }
@@ -164,14 +164,14 @@ h1, h2 {
   padding: 1.3em 2em;
   border: none;
   border-radius: 2em;
-  box-shadow: 0 5px 8px #7a7a7a;
+  box-shadow: 0 5px 8px #e0e0e0;
   background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
   color: #fff;
   font-weight: 700;
   cursor: pointer;
 }
 .top-banner__button:hover {
-  box-shadow: 0px 5px 8px #616161;
+  box-shadow: 0 5px 8px #7a7a7a;
   background-image: linear-gradient(to bottom right, #ff93e1, #a16be0);
 }
 
