--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -10,12 +10,14 @@
     align-items: $align;
 }
 
-@mixin box-shadow ($button: false, $inset: false) {
+@mixin box-shadow ($inset: false) {
     @if $inset {
         box-shadow: inset 0 7px 9px -7px $mid-gray;
-    } @else if $button {
-        box-shadow: 0 5px 8px $mid-gray;
     } @else {
         box-shadow: 0 5px 8px $gray;
     }
+}
+
+@mixin button-shadow ($color: $gray) {
+    box-shadow: 0 5px 8px $color;
 }
