--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -3,7 +3,7 @@
     padding: 1.3em 2em;
     border: none;
     border-radius: 2em;
-    @include box-shadow(button);
+    @include button-shadow;
     background-image: linear-gradient(to bottom right, $secondary, $primary);
     color: #fff;
     font-weight: $bold;
@@ -11,6 +11,6 @@
 }
 
 @mixin hover {
-    box-shadow: 0px 5px 8px lighten($dark-gray, 10);
-    background-image: linear-gradient(to bottom right, lighten($secondary, 5), lighten($primary, 5));
+    @include button-shadow($mid-gray);
+        background-image: linear-gradient(to bottom right, lighten($secondary, 5), lighten($primary, 5));
 }
