--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -72,3 +72,11 @@
         font-weight: bold;
     }
 }
+
+.step--active {
+    background-color: lighten($primary, 35);
+
+    &__icon {
+        color: $primary;
+    }
+}
