--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -6,3 +6,6 @@ $gray: rgb(224, 224, 224);
 $light-gray: lighten($gray, 8);
 $mid-gray: darken($gray, 40);
 $dark-gray: darken($gray, 60);
+
+$green: #73FFE1;
+$dark-green: darken($green, 40);
