--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,10 @@ th {
   padding: 0;
 }
 
+a, a:active, a:hover, a:visited {
+  text-decoration: none;
+  color: black;
+}
 body {
   font-size: 17px;
 }
@@ -104,7 +108,7 @@ h1, h2 {
 }
 
 .section-title {
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .menu-catagory__title {
@@ -121,6 +125,41 @@ h1, h2 {
 .header-logo {
   width: 220px;
   padding: 20px;
+}
+
+.card {
+  position: relative;
+  margin: 20px 0;
+  border-radius: 20px;
+  background-color: white;
+}
+.card__img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+}
+.card__descr {
+  padding: 10px 0 20px 20px;
+}
+
+.fa-heart {
+  position: absolute;
+  bottom: 30px;
+  right: 20px;
+}
+.fa-heart--active {
+  background-image: linear-gradient(#9356DC, #FF79DA);
+}
+
+.tag {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  padding: 0.5em;
+  border-radius: 5px;
+  background-color: #73FFE1;
+  color: #00a682;
 }
 
 .search-box {
@@ -212,6 +251,10 @@ h1, h2 {
 }
 .step--active__icon {
   color: #9356DC;
+}
+
+.restaurants {
+  background-color: #f4f4f4;
 }
 
 /*# sourceMappingURL=main.css.map */
