--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'layout/footer';
 
 @import 'components/buttons';
+@import 'components/cards';
 
 @import 'pages/home';
 @import 'pages/menu';
