modify favorite button

--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -16,13 +16,15 @@
     }
 }
 
-.fa-heart {
+.favorite {
     position: absolute;
     bottom: 30px;
     right: 20px;
+    font-size: 1.2em;
 
     &--active {
         background-image: linear-gradient($primary, $secondary);
+        color: none;
     }
 }
 
