--- a/css/main.css
+++ b/css/main.css
@@ -143,13 +143,15 @@ h1, h2 {
   padding: 10px 0 20px 20px;
 }
 
-.fa-heart {
+.favorite {
   position: absolute;
   bottom: 30px;
   right: 20px;
+  font-size: 1.2em;
 }
-.fa-heart--active {
+.favorite--active {
   background-image: linear-gradient(#9356DC, #FF79DA);
+  color: none;
 }
 
 .tag {
