--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -37,3 +37,15 @@ h1, h2 {
 .menu-catagory__title {
     font-family: 'Shrikhand', cursive;
 }
+
+.footer {
+    a {
+        text-decoration: none;
+        color: text-color($dark-gray);
+    }
+
+    &__title {
+        font-family: 'Shrikhand', cursive;
+        color: text-color($dark-gray);
+    }
+}
