--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -4,6 +4,23 @@
     border-radius: 20px;
     background-color: white;
 
+    a {
+        text-decoration: none;
+        color: black;
+      
+        &:visited {
+          @extend a;
+        }
+      
+        &:hover {
+          @extend a;
+        }
+      
+        &:active {
+          @extend a;
+        }
+      }
+
     &__img {
         width: 100%;
         height: 250px;
