--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -1,8 +1,3 @@
-@mixin center($width: 100%) {
-    width: $width;
-    margin: auto;
-}
-
 @mixin flex ($direction:column, $justify: center, $align:center) {
     display: flex;
     flex-direction: $direction;
@@ -20,4 +15,8 @@
 
 @mixin button-shadow ($color: $gray) {
     box-shadow: 0 5px 8px $color;
+}
+
+@mixin page-padding ($arg1: 0, $arg2: 20px) {
+    padding: $arg1 $arg2;
 }
