--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -5,7 +5,8 @@ $accent: #99E2D0;
 $gray: rgb(224, 224, 224);
 $light-gray: lighten($gray, 8);
 $mid-gray: darken($gray, 40);
-$dark-gray: darken($gray, 60);
+$dark-gray: darken($gray, 55);
+$deep-gray: darken($gray, 65);
 
 $green: #73FFE1;
 $dark-green: darken($green, 40);
