--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import 'abstracts/colors';
 @import 'abstracts/functions';
 @import 'abstracts/mixins';
+@import 'abstracts/variables';
 
 @import 'base/reset';
 @import 'base/typography';
