--- a/css/main.css
+++ b/css/main.css
@@ -137,8 +137,22 @@ h1, h2 {
   flex-direction: column;
   justify-content: center;
   align-items: left;
-  padding: 30px 20px;
+  padding: 20px 20px;
   background-color: #3a3a3a;
+}
+.footer__title {
+  margin-bottom: 0.5em;
+  font-size: 1.2rem;
+}
+.footer__link {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+  margin: 0.3em 0;
+}
+.footer__icon {
+  margin-right: 1em;
 }
 
 .card {
