--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -23,13 +23,18 @@
 
     &__img {
         width: 100%;
-        height: 250px;
+        height: 170px;
         object-fit: cover;
+        object-position: 50% 60%;
         border-radius: 10px 10px 0 0;
     }
 
     &__descr {
-        padding: 10px 0 20px 20px;
+        padding: 10px 0 15px 20px;
+    }
+
+    &__title {
+      margin-bottom: .2em;
     }
 }
 
