--- a/sass/abstracts/_colors.scss
+++ b/sass/abstracts/_colors.scss
@@ -2,11 +2,11 @@ $primary : #9356DC;
 $secondary: #FF79DA;
 $accent: #99E2D0;
 
-$gray: rgb(224, 224, 224);
+$gray: #e0e0e0;
 $light-gray: lighten($gray, 8);
 $mid-gray: darken($gray, 40);
 $dark-gray: darken($gray, 55);
 $deep-gray: darken($gray, 65);
 
-$green: #73FFE1;
+$green: #90f0db;
 $dark-green: darken($green, 40);
