--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -54,8 +54,10 @@
     position: absolute;
     right: 10px;
     top: 10px;
-    padding: .5em;
-    border-radius: 5px;
+    padding: .4em .7em;
+    border-radius: 2px;
     background-color: $green;
     color: $dark-green;
+    font-size: .8rem;
+    font-weight: bold;
 }
