modify menu: add header button

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,12 @@
 .header {
     @include flex;
+
+    &__button {
+        position: absolute;
+        left: 25px;
+        top: 25px;
+        font-size: 1.2em;
+    }
 }
 
 .header-logo {
