--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,16 @@ th {
   padding: 0;
 }
 
+a,
+a:link,
+a:visited,
+a:focus,
+a:hover,
+a:active {
+  color: black;
+  text-decoration: none;
+}
+
 body {
   font-size: 17px;
 }
@@ -111,7 +121,7 @@ h1, h2 {
   font-family: "Shrikhand", cursive;
 }
 
-.footer a, .footer .card a:active, .card .footer a:active, .footer .card a:hover, .card .footer a:hover, .footer .card a:visited, .card .footer a:visited {
+.footer a {
   text-decoration: none;
   color: #fff;
 }
@@ -125,6 +135,12 @@ h1, h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.header__button {
+  position: absolute;
+  left: 25px;
+  top: 25px;
+  font-size: 1.2em;
 }
 
 .header-logo {
@@ -160,10 +176,6 @@ h1, h2 {
   margin: 20px 0;
   border-radius: 20px;
   background-color: white;
-}
-.card a, .card a:active, .card a:hover, .card a:visited {
-  text-decoration: none;
-  color: black;
 }
 .card__img {
   width: 100%;
