--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -75,3 +75,13 @@ td,
 th {
   padding: 0;
 }
+
+a, 
+a:link, 
+a:visited, 
+a:focus, 
+a:hover, 
+a:active{
+    color:black;
+    text-decoration:none; 
+}
