--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -40,7 +40,7 @@
     padding: .4em .7em;
     border-radius: 2px;
     background-color: $green;
-    color: $dark-green;
+    color: $green-dark;
     font-size: .8rem;
     font-weight: bold;
 }
