--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -7,7 +7,7 @@
 
 @mixin box-shadow ($inset: false) {
     @if $inset {
-        box-shadow: inset 0 7px 9px -7px $mid-gray;
+        box-shadow: inset 0 7px 9px -7px $gray-mid;
     } @else {
         box-shadow: 0 5px 8px $gray;
     }
@@ -17,6 +17,6 @@
     box-shadow: 0 5px 8px $color;
 }
 
-@mixin page-padding ($arg1: 0, $arg2: 20px) {
+@mixin padding ($arg1: 0, $arg2: 20px) {
     padding: $arg1 $arg2;
 }
