--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 
 @import 'components/buttons';
 @import 'components/cards';
+@import 'components/dish';
 
 @import 'pages/home';
 @import 'pages/menu';
