--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -35,12 +35,12 @@ h1, h2 {
     margin-bottom: 0;
     font-family: 'Shrikhand', cursive;
 }
-.menu-catagory__title {
+.menu-catagory {
     font-size: 1rem;
     font-weight: $light;
     text-transform: uppercase;
 }
-.dish__descr{
+.dish__descr, .card__descr {
     font-weight: $light;
 }
 .footer {
