--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -12,7 +12,7 @@
         border-radius: 10px 10px 0 0;
     }
 
-    &__descr {
+    &__content {
         padding: 10px 0 15px 20px;
     }
 
@@ -29,7 +29,6 @@
 
     &--active {
         background-image: linear-gradient($primary, $secondary);
-        color: none;
     }
 }
 
