--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -4,7 +4,7 @@
 
 .menu {
     margin-top: -50px;
-    @include padding(50px 20px);
+    @include padding(30px 20px);
     border-radius: 3em 3em 0 0;
     background-color: $gray-light;
 
@@ -14,7 +14,18 @@
     }
 }
 .menu-catagory {
+    position: relative;
     margin: 10px 0;
+
+    &:after {
+        content: '';
+        width: 40px;
+        height: 3px;
+        background: $green;
+        position: absolute;
+        bottom: -6px;
+        left: 0;
+      }
 }
 .fa-heart {
     margin-right: 10px;
