--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,7 @@ h1, h2 {
 .card {
   position: relative;
   margin: 20px 0;
-  border-radius: 20px;
+  border-radius: 1rem;
   background-color: white;
 }
 .card__img {
@@ -193,7 +193,8 @@ h1, h2 {
   height: 170px;
   object-fit: cover;
   object-position: 50% 60%;
-  border-radius: 10px 10px 0 0;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 .card__content {
   padding: 10px 0 15px 20px;
@@ -217,7 +218,7 @@ h1, h2 {
   right: 10px;
   top: 10px;
   padding: 0.4em 0.7em;
-  border-radius: 2px;
+  border-radius: 0.2rem;
   background-color: #90f0db;
   color: #159f81;
   font-size: 0.8rem;
@@ -227,7 +228,7 @@ h1, h2 {
 .dish {
   margin: 20px 0;
   padding: 10px;
-  border-radius: 1em;
+  border-radius: 1rem;
   background-color: white;
 }
 
@@ -271,7 +272,7 @@ h1, h2 {
   margin: 30px 0;
   padding: 1.3em 2em;
   border: none;
-  border-radius: 2em;
+  border-radius: 2rem;
   box-shadow: 0 5px 8px #e0e0e0;
   background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
   color: #fff;
@@ -294,14 +295,14 @@ h1, h2 {
   align-items: center;
   margin: 20px 0 20px 10px;
   padding: 1.5em 0;
-  border-radius: 1.5em;
+  border-radius: 1rem;
   box-shadow: 0 5px 8px #e0e0e0;
   background-color: #f4f4f4;
 }
 .step__num {
   position: relative;
   right: 10px;
-  padding: 2px 6px;
+  padding: 2px 7px;
   border-radius: 50%;
   background-color: #9356DC;
   color: #fff;
@@ -332,7 +333,8 @@ h1, h2 {
 .menu {
   margin-top: -50px;
   padding: 30px 20px 20px;
-  border-radius: 3em 3em 0 0;
+  border-top-left-radius: 2rem;
+  border-top-right-radius: 2rem;
   background-color: #f4f4f4;
 }
 .menu__top {
