--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -2,7 +2,7 @@
     margin: 30px 0;
     padding: 1.3em 2em;
     border: none;
-    border-radius: 2em;
+    border-radius: $border-radius-lg;
     @include button-shadow;
     background-image: linear-gradient(to bottom right, $secondary, $primary);
     color: #fff;
