--- a/sass/components/_dish.scss
+++ b/sass/components/_dish.scss
@@ -1,6 +1,6 @@
 .dish {
     margin: 20px 0;
     padding: 10px;
-    border-radius: 1em;
+    border-radius: $border-radius;
     background-color: white;
 }
