--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -49,15 +49,15 @@
     @include flex(row, justify, center);
     margin: 20px 0 20px 10px;
     padding: 1.5em 0;
-    border-radius: 1.5em;
+    border-radius: $border-radius;
     @include box-shadow;
     background-color: $gray-light;
 
     &__num {
         position: relative;
         right: 10px;
-        padding: 2px 6px;
-        border-radius: 50%;
+        padding: 2px 7px;
+        border-radius: $border-radius-round;
         background-color: $primary;
         color: text-color($primary);
     }
