--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,3 +2,6 @@ $border-radius:         1rem;
 $border-radius-lg:      2rem;
 $border-radius-sm:     .2rem;
 $border-radius-round:   50%;
+
+$button-shadow:         0 5px 8px rgba(0, 0, 0, .2);
+$button-shadow-hover:   0 5px 8px rgba(0, 0, 0, .5);
