--- a/css/main.css
+++ b/css/main.css
@@ -165,7 +165,7 @@ h1, h2 {
   justify-content: center;
   align-items: left;
   padding: 20px 20px;
-  background-color: #3a3a3a;
+  background-color: #333333;
 }
 .footer__title {
   margin-bottom: 0.5em;
@@ -238,13 +238,13 @@ h1, h2 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  box-shadow: inset 0 7px 9px -7px #7a7a7a;
-  background-color: #e0e0e0;
-  color: #3a3a3a;
+  box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.8);
+  background-color: #d9d9d9;
+  color: #333333;
 }
 .search-box__icon {
   padding: 10px;
-  color: #3a3a3a;
+  color: #333333;
 }
 .search-box__input {
   font-weight: 500;
@@ -257,7 +257,7 @@ h1, h2 {
   justify-content: center;
   align-items: center;
   padding: 20px;
-  background-color: #f4f4f4;
+  background-color: #f2f2f2;
   color: #000;
   text-align: center;
 }
@@ -265,7 +265,7 @@ h1, h2 {
   width: 250px;
 }
 .top-banner__descr {
-  color: #545454;
+  color: #333333;
   text-align: center;
 }
 .top-banner__button {
@@ -273,14 +273,14 @@ h1, h2 {
   padding: 1.3em 2em;
   border: none;
   border-radius: 2rem;
-  box-shadow: 0 5px 8px #e0e0e0;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
   background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
   color: #fff;
   font-weight: 700;
   cursor: pointer;
 }
 .top-banner__button:hover {
-  box-shadow: 0 5px 8px #7a7a7a;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.5);
   background-image: linear-gradient(to bottom right, #ff93e1, #a16be0);
 }
 
@@ -296,8 +296,8 @@ h1, h2 {
   margin: 20px 0 20px 10px;
   padding: 1.5em 0;
   border-radius: 1rem;
-  box-shadow: 0 5px 8px #e0e0e0;
-  background-color: #f4f4f4;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
+  background-color: #f2f2f2;
 }
 .step__num {
   position: relative;
@@ -309,7 +309,7 @@ h1, h2 {
 }
 .step__icon {
   margin: 0 20px;
-  color: #7a7a7a;
+  color: gray;
 }
 .step__descr {
   font-weight: bold;
@@ -323,7 +323,7 @@ h1, h2 {
 }
 
 .restaurants {
-  background-color: #f4f4f4;
+  background-color: #f2f2f2;
 }
 
 .menu-photo {
@@ -335,7 +335,7 @@ h1, h2 {
   padding: 30px 20px 20px;
   border-top-left-radius: 2rem;
   border-top-right-radius: 2rem;
-  background-color: #f4f4f4;
+  background-color: #f2f2f2;
 }
 .menu__top {
   display: flex;
