--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,7 @@ h1, h2 {
   position: relative;
   margin: 20px 0;
   border-radius: 1rem;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
   background-color: white;
 }
 .card__img {
@@ -226,9 +227,11 @@ h1, h2 {
 }
 
 .dish {
+  width: 90vw;
   margin: 20px 0;
   padding: 10px;
   border-radius: 1rem;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.1);
   background-color: white;
 }
 
@@ -271,6 +274,7 @@ h1, h2 {
 .top-banner__button {
   margin: 30px 0;
   padding: 1.3em 2em;
+  width: 13em;
   border: none;
   border-radius: 2rem;
   box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
@@ -331,6 +335,10 @@ h1, h2 {
 }
 
 .menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin-top: -50px;
   padding: 30px 20px 20px;
   border-top-left-radius: 2rem;
@@ -338,6 +346,7 @@ h1, h2 {
   background-color: #f2f2f2;
 }
 .menu__top {
+  width: 90vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -362,6 +371,23 @@ h1, h2 {
 .fa-heart {
   margin-right: 10px;
   font-size: 1.5rem;
+}
+
+.button {
+  margin: 30px 0;
+  padding: 1.3em 2em;
+  width: 13em;
+  border: none;
+  border-radius: 2rem;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
+  background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  color: #fff;
+  font-weight: 700;
+  cursor: pointer;
+}
+.button:hover {
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.5);
+  background-image: linear-gradient(to bottom right, #ff93e1, #a16be0);
 }
 
 /*# sourceMappingURL=main.css.map */
