--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,16 +1,17 @@
-@mixin button {
-    margin: 30px 0;
-    padding: 1.3em 2em;
-    border: none;
-    border-radius: $border-radius-lg;
-    box-shadow: $button-shadow;
-    background-image: linear-gradient(to bottom right, $secondary, $primary);
-    color: $text-secondary;
-    font-weight: $bold;
-    cursor: pointer;
-}
-
-@mixin hover {
-    box-shadow: $button-shadow-hover;
-    background-image: linear-gradient(to bottom right, lighten($secondary, 5), lighten($primary, 5));
+@mixin button($hover: false) {
+    @if $hover==false {
+        margin:     $btn-margin;
+        padding:    $btn-padding;
+        width:      $btn-width;
+        border:     $btn-border;
+        border-radius:      $border-radius-lg;
+        box-shadow:         $btn-shadow;
+        background-image:   $btn-bg;
+        color:              $text-secondary;
+        font-weight:        $bold;
+        cursor: pointer;    
+    } @else {
+        box-shadow:         $btn-shadow-hover;
+        background-image:   $btn-bg-hover;    
+    }
 }
