--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -2,6 +2,7 @@
     position: relative;
     margin: 20px 0;
     border-radius: $border-radius;
+    @include box-shadow;
     background-color: white;
 
     &__img {
