--- a/sass/components/_dish.scss
+++ b/sass/components/_dish.scss
@@ -1,6 +1,8 @@
 .dish {
+    width: 90vw;
     margin: 20px 0;
     padding: 10px;
     border-radius: $border-radius;
+    @include box-shadow;
     background-color: white;
 }
