--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -3,6 +3,7 @@
 }
 
 .menu {
+    @include flex;
     margin-top: -50px;
     @include padding(30px 20px);
     border-top-left-radius: $border-radius-lg;
@@ -10,6 +11,7 @@
     background-color: $bg-secondary;
 
     &__top {
+        width: 90vw;
         @include flex(row, space-between, center);
         margin-bottom: 1.5em;
     }
@@ -31,4 +33,12 @@
 .fa-heart {
     margin-right: 10px;
     font-size: 1.5rem;
+}
+
+.button {
+    @include button;
+
+    &:hover {
+        @include button(hover);
+    }
 }
