--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,3 +11,8 @@ $btn-padding:       1.3em 2em;
 $btn-shadow:        0 5px 8px rgba(0, 0, 0, .2);
 $btn-shadow-hover:  0 5px 8px rgba(0, 0, 0, .5);
 $btn-width:         13em;
+
+$card-margin:   2rem 0;
+$card-padding:  1rem;
+
+$card-title-margin: .2rem;
