--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -19,7 +19,11 @@
     }
 
     &__title {
-      margin-bottom: $card-title-margin;
+        margin-bottom: $card-title-margin;
+    }
+
+    &__descr {
+        font-weight: $light;
     }
 }
 
