--- a/sass/components/_dish.scss
+++ b/sass/components/_dish.scss
@@ -5,4 +5,8 @@
     border-radius: $border-radius;
     @include box-shadow;
     background-color: white;
+
+    &__descr {
+        font-weight: $light;
+    }
 }
