--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -31,25 +31,25 @@ h4 {
     font-family: $font-family-cursive;
 }
 
+h1, h2 {
+    font-size: $h1-font-size;
+}
+h3, h4 {
+    font-size: $h3-font-size;
+}
+
 h1,
 h2,
 h3 {
     font-weight: $bold;
 }
 
-h1, h2 {
-    font-size: $h1-font-size;
-    margin-bottom: 1rem;
-}
-h3, h4 {
-    font-size: $h3-font-size;
-}
-
+h4, 
 p {
     font-weight: $normal;
 }
 
-h2.menu-catagory {
+h2.menu-catagory__title {
     font-size: $menu-h2-font-size;
     font-weight: $light;
     text-transform: uppercase;
