--- a/css/main.css
+++ b/css/main.css
@@ -150,7 +150,7 @@ h2.menu-catagory__title {
   flex-direction: column;
   justify-content: center;
   align-items: left;
-  padding: 20px 20px;
+  padding: 20px;
   background-color: #333333;
 }
 .footer h4 {
