--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     @include flex(column, center, left);
-    @include padding(20px);
+    padding: 20px;
     background-color: $bg-footer;
     
     h4 {
