add mixin: hover

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -36,10 +36,9 @@
 
     &__button {
        @include button;
-
-       &:hover {
-            @include button(hover);    
-        }
+       @include hover(){
+           @include button(hover);
+       };
     }
 }
 
