--- a/css/main.css
+++ b/css/main.css
@@ -222,8 +222,8 @@ h2.menu-catagory__title {
   top: 10px;
   padding: 0.4em 0.7em;
   border-radius: 0.2rem;
-  background-color: #90f0db;
-  color: #159f81;
+  background-color: #99E2D0;
+  color: #278870;
   font-size: 0.8rem;
   font-weight: bold;
 }
@@ -378,14 +378,12 @@ h2.menu-catagory__title {
   position: relative;
   margin: 10px 0;
 }
-.menu-catagory__title:after {
+.menu-catagory__title::after {
   content: "";
+  display: block;
   width: 40px;
   height: 3px;
-  background: #90f0db;
-  position: absolute;
-  bottom: -6px;
-  left: 0;
+  background: #99E2D0;
 }
 
 .fa-heart {
