--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -33,14 +33,12 @@
         position: relative;
         margin: 10px 0;
     
-        &:after {
+        &::after {
             content: '';
+            display: block;
             width: 40px;
             height: 3px;
-            background: $green;
-            position: absolute;
-            bottom: -6px;
-            left: 0;
+            background: $accent;
           }
     }
 }
