--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,8 @@ h4 {
 
 h2,
 h3,
-p {
+p,
+::after {
   font-family: "Roboto", sans-serif;
 }
 
@@ -205,18 +206,9 @@ h2.menu-catagory__title {
 .card__descr {
   font-weight: 300;
 }
-
-.favorite {
-  position: absolute;
-  bottom: 30px;
-  right: 20px;
-  font-size: 1.2em;
-}
-.favorite--active {
-  background-image: linear-gradient(#9356DC, #FF79DA);
-}
-
-.tag {
+.card::after {
+  content: attr(title);
+  display: block;
   position: absolute;
   right: 10px;
   top: 10px;
@@ -226,6 +218,16 @@ h2.menu-catagory__title {
   color: #278870;
   font-size: 0.8rem;
   font-weight: bold;
+}
+
+.favorite {
+  position: absolute;
+  bottom: 30px;
+  right: 20px;
+  font-size: 1.2em;
+}
+.favorite--active {
+  background-image: linear-gradient(#9356DC, #FF79DA);
 }
 
 .dish {
